max width on project's component span. Added leafs on career page. Fixed header not showing after paintdrip transition

--- a/src/styles/career.scss
+++ b/src/styles/career.scss
@@ -45,13 +45,38 @@
       margin-top: 5%;
     }
 
+    .career__leaf {
+      left: 88%;
+      max-height: 60px;
+      max-width: 60px;
+      position: absolute;
+    }
+
+    img:nth-child(2) {
+      top: 50%;
+      transform: scaleX(-1) rotate(180deg);
+    }
+
+    img:nth-child(3) {
+      top: 70%;
+      transform: rotate(180deg);
+    }
+
+    img:nth-child(4) {
+      top: 80%;
+      transform: scaleX(-1) rotate(180deg);
+    }
+
+    img:nth-child(5) {
+      top: 90%;
+    }
+
     &--step {
       text-align: center;
       left: 20%;
       margin-top: 5%;
       position: relative;
       width: 60%;
-
     }
   }
 
@@ -59,12 +84,11 @@
     background-color: $blue;
     color: white;
     margin-top: 5%;
-
     height: 80vh;
     width: 100vw;
 
     p {
-      width: 50%;
+      width: 70%;
     }
   }
 }
