--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -190,6 +190,7 @@ header {
     transition: .5s ease;
     -ms-transform: translate(-50%, -50%);
     text-align: center;
+    width: 100%;
     z-index: 3;
   }
 
